correction d'erreur d'hebergement 4

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-light">
 <div class="container mt-5">
-    <h2 class="mb-4 text-center">🔎 Scraper Intelligent - Résumé IA</h2>
+    <h2 class="mb-4 text-center"> Scraper Intelligent - Résumé IA</h2>
 
     <!-- FORMULAIRE avec ID scrapeForm -->
     <form id="scrapeForm">
@@ -91,7 +91,7 @@ if (result.texts_found > 0) {
 
 
 
-       
+
     } catch (error) {
         document.getElementById('output').innerHTML = `<div class="error">❌ Erreur: ${error.message}</div>`;
     }
